# s3-connector-benchmarking

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ruff.yml
s3connectorbenchmarking/: s3connectorbenchmarking.py
s3connectorbenchmarking/conf/: config.yaml
s3connectorbenchmarking/datasets/: s3iterabledataset.py
s3connectorbenchmarking/models/: entitlement.py  model.py
